@@ -8,6 +8,7 @@ git-annex (0.03) UNRELEASED; urgency=low
   * Fixed memory leak; git-annex no longer reads the whole file list
     from git before starting, and will be much faster with large repos.
   * Fix crash on unknown symlinks.
+  * Added remote.annex-scp-options and remote.annex-ssh-options.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 28 Oct 2010 13:46:59 -0400
 
